fix: manifest page - unified CSS, fixed dark mode, modern tabs

--- a/css/manifest.css
+++ b/css/manifest.css
@@ -9,29 +9,25 @@ display: inline-block;
 }
 
 .section-selector .list a {
-color: var(--bg-primary);
+color: var(--text-primary);
     transition: all 0.3s ease-in-out;
 }
 
 .section-selector .list a:hover {
-color:dodgerblue;
+color: var(--text-link);
 }
 
 .section-selector .list:hover {
-color:dodgerblue;
-    background-color: #1617283a;
+color: var(--text-link);
+    background-color: var(--bg-secondary);
 }
 
 .section-holder {
-float: right;
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
+width: 100%;
     border-radius: 10px;
-    width: 80%;
     /* height:fit-content; */
     height:fit-content;
-    background-color: #ffffffa0;
+    background-color: var(--bg-card);
 }
 
 @media (max-width:1200px) {
@@ -55,7 +51,7 @@ display: initial;
 display: inline-block;
     height :300px;
     width: 95%;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: transparent;
     border-radius: 10px;
 }
 
@@ -63,7 +59,7 @@ display: inline-block;
 display: inline-block;
     height :fit-content;
     width: 95%;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: transparent;
     border-radius: 10px;
 }
 
@@ -72,7 +68,7 @@ float: left;
     margin: 20px 9px 9px 9px;
     height :282px;
     width: 200px;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: transparent;
     border-radius: 10px;
     background-size: 200px;
 }
@@ -117,7 +113,7 @@ margin: 9px;
 display: inline-block;
     height :218px;
     width: 95%;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: transparent;
     border-radius: 10px;
 }
 
@@ -126,7 +122,7 @@ float: left;
     margin: 20px 9px 9px 9px;
     height :200px;
     width: 200px;
-    background-color: rgba(0, 0, 0, 0);
+    background-color: transparent;
     border-radius: 10px;
     background-size: 200px;
 }
@@ -160,7 +156,7 @@ display: unset;
 .section-holder .game-holder .button-container .button-holder:hover {
 width: 32%;
     height:40px;
-    background-color: #06c613;
+    background-color: var(--text-link);
 }
 
 .section-holder .game-holder .button-container .button-holder a {
@@ -169,7 +165,7 @@ line-height: 20px;
 }
 
 .section-holder .game-holder .button-container .button-holder a:hover {
-color:dodgerblue;
+color: var(--text-link);
 }
 
 .section-holder .game-holder .game-intro p {
@@ -192,21 +188,17 @@ display: inline-block;
 }
 
 [data-theme="dark"] .section-holder {
-float: right;
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
+width: 100%;
     border-radius: 10px;
-    width: 80%;
     /* height:fit-content; */
     height:fit-content;
     background-color: var(--bg-card);
 }
 
-[data-theme="dark"] }
+[data-theme="dark"]
 .section-holder section {
 display: none;
     transition: all 0.5s ease-in-out;
-    color:#fff
+    color: var(--text-primary);
 }
 
